--- a/work3.html
+++ b/work3.html
@@ -131,7 +131,7 @@
         </ol>
       </div>
         <div class="work-list">
-          <h4 class="mt-5 mb-3 w4">국가 프로젝트 수행실적</h4>
+          <h4 class="mt-4 mb-3 w4">국가 프로젝트 수행실적</h4>
           <table class="work-tb">
             <thead>
               <tr>
@@ -178,6 +178,13 @@
                 <td>2017.06 ~ 2018.05</td>
                 <td>1.33억원</td>
               </tr>
+              <tr>
+                <td>6</td>
+                <td>KEITI</td>
+                <td>슬러지접촉분리형 아질산화-아탈질 공정을 이용한 생물학적 하폐수 고도처리 </td>
+                <td>2020.06 ~ 2022.02</td>
+                <td>5억원</td>
+              </tr>
             </tbody>
             </table>
             <h4 class="mt-5 mb-3 w4">자체 연구개발 수행실적</h4>
@@ -185,7 +192,7 @@
               <thead>
                 <tr>
                   <th>순번</th>
-                  <th>공동 <br>연구기관</th>
+                  <th>공동 연구기관</th>
                   <th>과제명</th>
                   <th>기간</th>
                   <th>연구비</th>
