--- a/history.html
+++ b/history.html
@@ -257,22 +257,11 @@
           </div>
         </div>
         <div class="history-list">
-          <div class="row"><span class="history-year mr-6">2016</span>
-            <div class="history-events">
-              <div class="history-event">
-                <span class="history-month">06</span>
-                <span class="history-content">대표자 변경
-                </span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="history-list">
-          <div class="row"><span class="history-year mr-6">2017</span>
+          <div class="row"><span class="history-year mr-6">2018</span>
             <div class="history-events">
               <div class="history-event">
                 <span class="history-month">11</span>
-                <span class="history-content">주소이전 (경기도 용인시 → 경기도 화성시)
+                <span class="history-content">경기도 유망환경 기업 지정
                 </span>
               </div>
             </div>
