certification order changed

--- a/certi.html
+++ b/certi.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="ko">
 
 <head>
@@ -132,6 +132,30 @@
 
       <!-- Certification List -->
       <div class="row">
+      <div class="col-lg-3 col-sm-6 mb-4">
+        <div class="certi">
+        <img class="img-fluid" src="certification/경기도유망환경기업지정서/page-1.jpg" alt="">
+        <div class="certi-name">경기도 유망환경기업 지정서</div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 mb-4">
+        <div class="certi">
+        <img class="img-fluid" src="certification/벤처기업확인서/page-1.jpg" alt="">
+        <div class="certi-name">벤처기업 확인서</div>
+      </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 mb-4">
+        <div class="certi">
+        <img class="img-fluid" src="certification/기술혁신형 중소기업(Inno-Biz) 확인서/page-1.jpg" alt="">
+        <div class="certi-name">기술혁신형 중소기업(Inno-Biz) 확인서</div>
+      </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 mb-4">
+        <div class="certi">
+        <img class="img-fluid" src="certification/기업부설연구소 인정서/page-1.jpg" alt="">
+        <div class="certi-name">기업부설연구소 인정서</div>
+      </div>
+      </div>
         <div class="col-lg-3 col-sm-6 mb-4">
           <div class="certi">
           <img class="img-fluid" src="certification/ISO 인증서 - 14001 환경경영/page-1.jpg" alt="">
@@ -144,6 +168,50 @@
           <div class="certi-name">ISO9001</div>
         </div>
         </div>
+        <div class="col-lg-3 col-sm-6 mb-4">
+          <div class="certi">
+          <img class="img-fluid" src="certification/상하수도설비공사업/page-1.jpg" alt="">
+          <div class="certi-name">상하수도설비공사업</div>
+        </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 mb-4">
+          <div class="certi">
+          <img class="img-fluid" src="certification/수질 환경전문공사업등록증/page-1.jpg" alt="">
+          <div class="certi-name">수질 환경전문공사업 등록증</div>
+        </div>
+        </div>   
+        <div class="col-lg-3 col-sm-6 mb-4">
+          <div class="certi">
+          <img class="img-fluid" src="certification/수질 측정대행업(전체)/page-1.jpg" alt="">
+          <div class="certi-name">수질 측정대행업</div>
+        </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 mb-4">
+          <div class="certi">
+          <img class="img-fluid" src="certification/악취-측정대행업-전체/악취-측정대행업-1.jpg" alt="">
+          <div class="certi-name">악취 측정대행업</div>
+        </div>
+        </div>        
+        <div class="col-lg-3 col-sm-6 mb-4">
+          <div class="certi">
+          <img class="img-fluid" src="certification/수질환경관리대행기관지정서/page-1.jpg" alt="">
+          <div class="certi-name">수질환경관리 대행기관 지정서</div>
+        </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 mb-4">
+          <div class="certi">
+          <img class="img-fluid" src="certification/해외건설업-신고확인증-전문건설업_상하수도설비공사업_.jpg/866705a7240d42f6cb146372c4ff7d02aaWBUFjb1Oh9eYBg-0.jpg" alt="">
+          <div class="certi-name">해외건설업-전문건설업</div>
+        </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 mb-4">
+          <div class="certi">
+          <img class="img-fluid" src="certification/해외건설업-신고확인증-환경전문공사업.jpg/e4ebb15b55644eedf1f2896a910cf01fVL2esG2gY1ySQZJC-0.jpg" alt="">
+          <div class="certi-name">해외건설업-환경전문공사업</div>
+        </div>
+        </div>
+
+
         <div class="col-lg-3 col-sm-6 mb-4">
           <div class="certi">
           <img class="img-fluid" src="certification/가축분뇨관련영업허가증/page-1.jpg" alt="">
@@ -170,62 +238,8 @@
         </div>
         <div class="col-lg-3 col-sm-6 mb-4">
           <div class="certi">
-          <img class="img-fluid" src="certification/경기도유망환경기업지정서/page-1.jpg" alt="">
-          <div class="certi-name">경기도 유망환경기업 지정서</div>
-        </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 mb-4">
-          <div class="certi">
-          <img class="img-fluid" src="certification/기술혁신형 중소기업(Inno-Biz) 확인서/page-1.jpg" alt="">
-          <div class="certi-name">기술혁신형 중소기업(Inno-Biz) 확인서</div>
-        </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 mb-4">
-          <div class="certi">
-          <img class="img-fluid" src="certification/기업부설연구소 인정서/page-1.jpg" alt="">
-          <div class="certi-name">기업부설연구소 인정서</div>
-        </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 mb-4">
-          <div class="certi">
-          <img class="img-fluid" src="certification/벤처기업확인서/page-1.jpg" alt="">
-          <div class="certi-name">벤처기업 확인서</div>
-        </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 mb-4">
-          <div class="certi">
-          <img class="img-fluid" src="certification/상하수도설비공사업/page-1.jpg" alt="">
-          <div class="certi-name">상하수도설비공사업</div>
-        </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 mb-4">
-          <div class="certi">
           <img class="img-fluid" src="certification/소기업확인서(2020.04.01~2021.03.31)/page-1.jpg" alt="">
-          <div class="certi-name">소기업확인서</div>
-        </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 mb-4">
-          <div class="certi">
-          <img class="img-fluid" src="certification/수질 측정대행업(전체)/page-1.jpg" alt="">
-          <div class="certi-name">수질 측정대행업</div>
-        </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 mb-4">
-          <div class="certi">
-          <img class="img-fluid" src="certification/수질 환경전문공사업등록증/page-1.jpg" alt="">
-          <div class="certi-name">수질 환경전문공사업 등록증</div>
-        </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 mb-4">
-          <div class="certi">
-          <img class="img-fluid" src="certification/수질환경관리대행기관지정서/page-1.jpg" alt="">
-          <div class="certi-name">수질환경관리 대행기관 지정서</div>
-        </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 mb-4">
-          <div class="certi">
-          <img class="img-fluid" src="certification/악취-측정대행업-전체/악취-측정대행업-1.jpg" alt="">
-          <div class="certi-name">악취 측정대행업</div>
+          <div class="certi-name">중소기업확인서</div>
         </div>
         </div>
         <div class="col-lg-3 col-sm-6 mb-4">
@@ -234,60 +248,12 @@
           <div class="certi-name">연구개발 서비스업 신고증</div>
         </div>
         </div>
-        <div class="col-lg-3 col-sm-6 mb-4">
-          <div class="certi">
-          <img class="img-fluid" src="certification/해외건설업-신고확인증-전문건설업_상하수도설비공사업_.jpg/866705a7240d42f6cb146372c4ff7d02aaWBUFjb1Oh9eYBg-0.jpg" alt="">
-          <div class="certi-name">해외건설업-전문건설업</div>
-        </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 mb-4">
-          <div class="certi">
-          <img class="img-fluid" src="certification/해외건설업-신고확인증-환경전문공사업.jpg/e4ebb15b55644eedf1f2896a910cf01fVL2esG2gY1ySQZJC-0.jpg" alt="">
-          <div class="certi-name">해외건설업-환경전문공사업</div>
-        </div>
-        </div>
       </div>
       <!-- /.row -->
 
       <h2 class="" style="border-bottom:1px solid grey"> &nbsp; &nbsp;특허 </h2>
-            <!-- Certification2 List -->
+        <!-- Certification2 List -->
             <div class="row">
-              <div class="col-lg-3 col-sm-6 mb-4">
-                <div class="certi">
-                <img class="img-fluid" src="certification2/상표등록증 - DynaPAD-1.jpg" alt="">
-                <div class="certi-name">DynaPAD</div>
-                </div>
-              </div>
-              <div class="col-lg-3 col-sm-6 mb-4">
-                <div class="certi">
-                <img class="img-fluid" src="certification2/상표등록증 - 제11류 하수용 정화설비등 20건-1.jpg" alt="">
-                <div class="certi-name">하수용 정화설비</div>
-              </div>
-              </div>
-              <div class="col-lg-3 col-sm-6 mb-4">
-                <div class="certi">
-                <img class="img-fluid" src="certification2/상표등록증(하수용 정화설비등 20건 HiDOV)-1.jpg" alt="">
-                <div class="certi-name">하수용 정화설비</div>
-              </div>
-              </div>
-              <div class="col-lg-3 col-sm-6 mb-4">
-                <div class="certi">
-                <img class="img-fluid" src="certification2/특허증 - 배오존을 이용한 부상분리와 무포기 오존 반응기를 이용한 수 처리장치-1.jpg" alt="">
-                <div class="certi-name">수처리장치</div>
-              </div>
-              </div>
-              <div class="col-lg-3 col-sm-6 mb-4">
-                <div class="certi">
-                <img class="img-fluid" src="certification2/특허증 - 산소용해장치(제10-1579557호)-1.jpg" alt="">
-                <div class="certi-name">산소용해장치</div>
-              </div>
-              </div>
-              <div class="col-lg-3 col-sm-6 mb-4">
-                <div class="certi">
-                <img class="img-fluid" src="certification2/특허증 - 수직 멀티 베인형 싸이클론 장치 및 이를 포함하는 세정탑 시스템-1.jpg" alt="">
-                <div class="certi-name">세정탑 시스템</div>
-              </div>
-              </div>
               <div class="col-lg-3 col-sm-6 mb-4">
                 <div class="certi">
                 <img class="img-fluid" src="certification2/특허증 - 스컴 및 부유물질 제거장치 및 스컴 및 부유물질 제거방법-1.jpg" alt="">
@@ -300,7 +266,36 @@
                 <div class="certi-name">저수지 수질 정화시스템</div>
                 </div>
               </div>
-              
+              <div class="col-lg-3 col-sm-6 mb-4">
+                <div class="certi">
+                <img class="img-fluid" src="certification2/특허증 - 산소용해장치(제10-1579557호)-1.jpg" alt="">
+                <div class="certi-name">산소용해장치</div>
+              </div>
+              </div>
+              <div class="col-lg-3 col-sm-6 mb-4">
+                <div class="certi">
+                <img class="img-fluid" src="certification2/특허증 - 배오존을 이용한 부상분리와 무포기 오존 반응기를 이용한 수 처리장치-1.jpg" alt="">
+                <div class="certi-name">수처리장치</div>
+              </div>
+              </div>
+              <div class="col-lg-3 col-sm-6 mb-4">
+                <div class="certi">
+                <img class="img-fluid" src="certification2/특허증 - 수직 멀티 베인형 싸이클론 장치 및 이를 포함하는 세정탑 시스템-1.jpg" alt="">
+                <div class="certi-name">세정탑 시스템</div>
+              </div>
+              </div>
+              <div class="col-lg-3 col-sm-6 mb-4">
+                <div class="certi">
+                <img class="img-fluid" src="certification2/상표등록증 - 제11류 하수용 정화설비등 20건-1.jpg" alt="">
+                <div class="certi-name">하수용 정화설비</div>
+              </div>
+              </div>
+              <div class="col-lg-3 col-sm-6 mb-4">
+                <div class="certi">
+                <img class="img-fluid" src="certification2/상표등록증 - DynaPAD-1.jpg" alt="">
+                <div class="certi-name">DynaPAD</div>
+                </div>
+              </div>
               </div>
             </div>
             <!-- /.row -->
@@ -340,4 +335,4 @@
   <script src="js/nav.js"></script>
 </body>
 
-</html>
+</html> -->
