--- a/business1.html
+++ b/business1.html
@@ -136,13 +136,13 @@
         </div>
         
         <div class="business-intro" >
-          <p>가축분뇨/산업폐수처리시설, 오수/분뇨처리시설, 하수/정수처리시설 등의 설계 및 시공 사업분야입니다.</p>
+          <p>가축분뇨/폐수처리시설, 오수/분뇨처리시설, 하수/정수처리시설 등의 설계 및 시공 사업분야입니다.</p>
        </div>
        <div class="business-content">
         <h3 class="sub-tit">
           고농도폐수처리공법 - VMBD(Vortical Micro Bubble Diffuser) 공법
         </h3>
-        <p class="bg-grey"><strong>산소용해장치(VMBD)</strong>는 폭기액을 순환시키며 직접 공기를 
+        <p class="bg-grey"><strong>산소용해장치(VMBD)</strong>는 생물반응조 유체를 순환시키며 직접 공기를 
           접촉 용해시키는 특수 구조 노즐의 미세기포 발생장치를 이용한 공법이다.</p>
         <h3 class="sub-tit">
           VMBD 공법의 원리
