--- a/greet.html
+++ b/greet.html
@@ -155,7 +155,7 @@
           신뢰를 소중히 생각하는 기업의 리더가 되도록 노력하겠습니다.
         </p>
         <p class="color-B">최고를 지향하고 끊임없는 열정과 도전으로 고객이 감동하고 신뢰할 수 있는 환경 일류 기업으로의 경영신화를 이루어 가겠습니다.</p>
-        <p class="py-4 pr-1 text-right">주흥환경(주) 대표이사 <span class="w7">이길재</span></p>
+        <p class="py-4 pr-1 text-right"><span class="w7">주흥환경(주)</span> 임직원 일동</p>
       </div>
     </div>
       <!-- /.row -->
