contact_me.js file modifying

--- a/business1.html
+++ b/business1.html
@@ -148,7 +148,7 @@
           VMBD 공법의 원리
         </h3>
         <img src="img/VMBD1.png" width=90%>
-        <img class="my-4" src="img/VMBD2-1.png" width=90%>
+        <img class="my-4" src="img/VMBD2.png" width=90%>
         <h3 class="sub-tit">
           기존 폭기시스템과의 비교
         </h3>
