--- a/business4.html
+++ b/business4.html
@@ -142,7 +142,7 @@
         </h3>
         <p class="bg-grey">
           하·폐수, 대기 및 폐기물 등 환경 관련 시설에 대한
-          문제점을 최소의 비용으로 최대의 효과를 달성할 수 있는 대안 및 해결 방안 등을 체계적으로 제시합니다.
+          문제점을 최소의 비용으로 최대의 효과를 달성할 수 있는 대안 및 해결 방안 등을 체계적으로 제시한다.
         </p>
         <h3 class="sub-tit">
           환경컨설팅 사업범위
@@ -169,7 +169,7 @@
         <h3 class="sub-tit">
           연구개발 수행 현황
         </h3>
-        <img src="img/연구소.png" width=80%>
+        <img src="img/lab.png" width=80%>
       </div>
       <!-- ./business-content -->
       </div>
