--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,7 @@
         </div>
       </div>
         <form name="sentMessage" id="contactForm" novalidate>
-          <div class="control-group form-group">
+          <div class="control-grosentMessageup form-group">
             <div class="controls text-center mt-3">
               <input type="radio" name="personal" id="personal" value="personal" required data-validation-required-message="개인정보취급방침에 동의해주세요.">
               <label>개인정보취급방침을 읽었으며 이에 동의합니다.</label>
