--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
       </ol>
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
@@ -118,7 +117,7 @@
         <!-- Slide Two - Set the background image for this slide in the line below -->
         <div class="carousel-item" style="background-image: url('img/city-2278497.jpg')">
           <div class="carousel-caption d-none d-md-block">
-            <h3>Second Slide</h3>
+            <h3>깨끗하고 맑은 환경을 위하여</h3>
             <p>This is a description for the second slide.</p>
           </div>
         </div>
@@ -136,58 +135,69 @@
   </header>
 
   <!-- Page Content -->
-  <div class="container">
+  <div class="main-business container">
     <!-- Portfolio Section -->
-    <h2 class="mb-4 text-center">Business</h2>
+    <h2>Business</h2>
     <div class="mb-5 row">
-      <div class="col-lg-3 col-sm-6 portfolio-item">
-        <div class="card h-100" onclick="location.href='business1.html';">
-          <div class="card-img" style="background-image: url('img/splashing-165192.jpg')"></div>
+      <div class="col-lg col-sm-6 portfolio-item">
+        <div class="card h-100 feature">
+          <a href="business1.html">
+            <div class="card-img" style="background-image: url('img/splashing-165192.jpg')">
+            </div>
+          </a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="business1.html">폐수처리설비</a>
+              폐수처리설비
             </h4>
-            <p class="card-text">가축분뇨처리시설, 산업폐수처리시설, 하수처리시설, 오수, 분뇨처리시설, 정수처리시설 등의 설계 및 시공 사업분야입니다.</p>
+            <p class="card-text">가축분뇨/폐수처리시설, 오수/분뇨처리시설, 하수정수처리시설 설계 및 시공</p>
           </div>
         </div>
       </div>
-      <div class="col-lg-3 col-sm-6 portfolio-item">
-        <div class="card h-100" onclick="location.href='business2.html';">
-          <div class="card-img" style="background-image: url('img/handshake-3298455.jpg')"></div>
+      <div class="col-lg col-sm-6 portfolio-item">
+        <div class="card h-100 feature">
+          <a href="business2.html">
+            <div class="card-img" style="background-image: url('img/handshake-3298455.jpg')"></div>
+          </a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="business2.html">위탁운영관리</a>
+              위탁운영관리
             </h4>
-            <p class="card-text">개인하수처리시설, 산업폐수처리시설, 정수처리시설 등의 위탁관리용역 사업분야입니다.</p>
+            <p class="card-text">개인하수처리시설, 폐수처리시설, 정수처리시설 위탁관리용역 </p>
           </div>
         </div>
       </div>
-      <div class="col-lg-3 col-sm-6 portfolio-item">
-        <div class="card h-100" onclick="location.href='business3.html';">
-          <div class="card-img" style="background-image: url('img/lab-217041.jpg')"></div>
+      <div class="col-lg col-sm-6 portfolio-item">
+        <div class="card h-100 feature">
+          <a href="business3.html">
+            <div class="card-img" style="background-image: url('img/shutterstock_530971462.jpg')"></div>
+          </a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="business3.html">측정대행</a>
+              측정대행
             </h4>
-            <p class="card-text">악취분석, 수질분석, 생태독성 등의 측정대행용역 사업분야입니다.</p>
+            <p class="card-text">악취분석, 수질분석, 생태독성 측정대행용역</p>
           </div>
         </div>
       </div>
-      <div class="col-lg-3 col-sm-6 portfolio-item">
-        <div class="card h-100" onclick="location.href='business4.html';">
-          <div class="card-img" style="background-image: url('img/office-1209640.jpg')"></div>
+      <div class="col-lg col-sm-6 portfolio-item">
+        <div class="card h-100 feature">
+          <a href="business4.html">
+            <div class="card-img" style="background-image: url('img/office-1209640.jpg')"></div>
+          </a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="business4.html">환경컨설팅 및 인허가</a>
+              환경컨설팅 및 인허가
             </h4>
-            <p class="card-text">국가과제, 산학공동연구 등의 연구개발과 환경설비의 개선/관리 사업분야 입니다.</p>
+            <p class="card-text">국가과제, 산학공동연구 진행 및 환경설비의 개선/관리</p>
           </div>
         </div>
       </div>
     </div>
-    <!-- /.row -->
+    <!-- /.row-->
   </div>
   <!-- /.container -->
+  </div>
+
 
   <!-- Footer -->
   <footer class="py-4 bg-dark">
