index.html business design

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+
       </ol>
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
@@ -114,14 +114,6 @@
             <p>This is a description for the first slide.</p>
           </div>
         </div>
-        <!-- Slide Two - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('img/city-2278497.jpg')">
-          <div class="carousel-caption d-none d-md-block">
-            <h3>깨끗하고 맑은 환경을 위하여</h3>
-            <p>This is a description for the second slide.</p>
-          </div>
-        </div>
-
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -133,31 +125,37 @@
       </a>
     </div>
   </header>
-
+  <div class="background-custom" style= "background-image: url('img/4.png')"></div>
   <!-- Page Content -->
   <div class="main-business container">
     <!-- Portfolio Section -->
     <h2>Business</h2>
-    <div class="mb-5 row">
+    <h3>주흥환경이 여러분들의 맑은 세상을 책임지겠습니다.</h3>
+    <div class="portfolio mb-5 row">
       <div class="col-lg col-sm-6 portfolio-item">
-        <div class="card h-100 feature">
+        <div class="card h-100">
+          <div class="card-bg"></div>
+          <div class="card-head">
           <a href="business1.html">
-            <div class="card-img" style="background-image: url('img/splashing-165192.jpg')">
-            </div>
+            <div class="card-img" style="background-image: url('img/splashing-165192.jpg')"></div>
           </a>
+        </div>
           <div class="card-body">
             <h4 class="card-title">
               폐수처리설비
             </h4>
-            <p class="card-text">가축분뇨/폐수처리시설, 오수/분뇨처리시설, 하수정수처리시설 설계 및 시공</p>
+            <p class="card-text">가축분뇨/폐수처리시설, 오수/분뇨처리시설, 하수/정수처리시설<br> 설계 및 시공</p>
           </div>
         </div>
       </div>
       <div class="col-lg col-sm-6 portfolio-item">
-        <div class="card h-100 feature">
+        <div class="card h-100">
+          <div class="card-bg"></div>
+          <div class="card-head">
           <a href="business2.html">
             <div class="card-img" style="background-image: url('img/handshake-3298455.jpg')"></div>
           </a>
+        </div>
           <div class="card-body">
             <h4 class="card-title">
               위탁운영관리
@@ -167,10 +165,13 @@
         </div>
       </div>
       <div class="col-lg col-sm-6 portfolio-item">
-        <div class="card h-100 feature">
+        <div class="card h-100">
+          <div class="card-bg"></div>
+          <div class="card-head">
           <a href="business3.html">
-            <div class="card-img" style="background-image: url('img/shutterstock_530971462.jpg')"></div>
+            <div class="card-img" style="background-image: url('img/shutterstock_1101455105.jpg')"></div>
           </a>
+        </div>
           <div class="card-body">
             <h4 class="card-title">
               측정대행
@@ -180,10 +181,13 @@
         </div>
       </div>
       <div class="col-lg col-sm-6 portfolio-item">
-        <div class="card h-100 feature">
+        <div class="card h-100">
+          <div class="card-bg"></div>
+          <div class="card-head">
           <a href="business4.html">
             <div class="card-img" style="background-image: url('img/office-1209640.jpg')"></div>
           </a>
+        </div>
           <div class="card-body">
             <h4 class="card-title">
               환경컨설팅 및 인허가
@@ -192,10 +196,12 @@
           </div>
         </div>
       </div>
+
     </div>
     <!-- /.row-->
   </div>
   <!-- /.container -->
+
   </div>
 
 
