business intro style changed

--- a/business3-1.html
+++ b/business3-1.html
@@ -130,7 +130,7 @@
             <a href="index.html">Home</a>
           </li>
           <li class="breadcrumb-item"><a href="./business1.html">사업소개</a></li>
-          <li class="breadcrumb-item"><a href="./business2.html">위탁운영관리</a></li>
+          <li class="breadcrumb-item"><a href="./business2.html">측정대행</a></li>
         </ol>
         </div>
         <div class="business-intro" >
