--- a/business1.html
+++ b/business1.html
@@ -120,7 +120,7 @@
       </div>
   
       <!-- Page Content -->
-      <div class="container">
+      <div class="container" id="business">
   
         <!-- Page Heading/Breadcrumbs -->
         <div class="title-bar">
@@ -136,7 +136,8 @@
         </div>
         
         <div class="business-intro" >
-          <p>가축분뇨/폐수처리시설, 오수/분뇨처리시설, 하수/정수처리시설 등의 설계 및 시공 사업분야입니다.</p>
+          <p>가축분뇨처리시설, 폐수처리시설, 오수, 분뇨처리시설, 하수처리시설, 정수처리시설 등을 설계하고 시공하는 사업분야입니다.<br>
+            가축분뇨,폐수처리 등에는 산소용해장치(VMBD)를 활용하여 설비를 구성합니다.</p>
        </div>
        <div class="business-content">
         <h3 class="sub-tit">
