--- a/business1.html
+++ b/business1.html
@@ -137,7 +137,7 @@
         
         <div class="business-intro" >
           <p>가축분뇨처리시설, 폐수처리시설, 오수, 분뇨처리시설, 하수처리시설, 정수처리시설 등을 설계하고 시공하는 사업분야입니다.<br>
-            가축분뇨,폐수처리 등에는 산소용해장치(VMBD)를 활용하여 설비를 구성합니다.</p>
+            <!--가축분뇨,폐수처리 등에는 산소용해장치(VMBD)를 활용하여 설비를 구성합니다. --></p>
        </div>
        <div class="business-content">
         <h3 class="sub-tit">
