--- a/greet.html
+++ b/greet.html
@@ -151,7 +151,7 @@
               앞으로 우리와 후손들이 누려야 할 아름다운 환경의 보전을 위하여
               끊임없이 도전하고 연구하며 풍부한 경험을 바탕으로
               신뢰를 소중히 생각하는 기업이 되도록 노력하겠습니다.
-              최고를 지향하고, 끊임없는 열정과 도전으로 <br> 고객이 감동하고 신뢰할 수 있는 환경 일류 기업으로의 경영신화를 이루어 가겠습니다.
+              최고를 지향하고, 끊임없는 열정과 도전으로 고객이 감동하고 신뢰할 수 있는 환경 일류 기업으로의 경영신화를 이루어 가겠습니다.
             </p>
             <p class="py-4 pr-3 text-right"><span class="w7">주흥환경(주)</span> 임직원 일동</p>
           </div>        
