business portfolio onclick attribute add

--- a/index.html
+++ b/index.html
@@ -132,15 +132,13 @@
     <h2>Business</h2>
     <h3>주흥환경이 여러분들의 맑은 세상을 책임지겠습니다.</h3>
     <div class="portfolio mb-5 row">
-      <div class="col-lg col-sm-6 portfolio-item">
+      <div class="col-lg col-sm-6 portfolio-item" style=" cursor: pointer;" onclick="location.href='business1.html';">
         <div class="card h-100">
           <div class="card-bg"></div>
           <div class="card-head">
-          <a href="business1.html">
             <div class="card-img" style="background-image: url('img/splashing-165192.jpg')"></div>
-          </a>
         </div>
-          <div class="card-body">
+          <div class="card-body" >
             <h4 class="card-title">
               폐수처리설비
             </h4>
@@ -148,13 +146,11 @@
           </div>
         </div>
       </div>
-      <div class="col-lg col-sm-6 portfolio-item">
+      <div class="col-lg col-sm-6 portfolio-item" style=" cursor: pointer;" onclick="location.href='business2.html';">
         <div class="card h-100">
           <div class="card-bg"></div>
           <div class="card-head">
-          <a href="business2.html">
             <div class="card-img" style="background-image: url('img/handshake-3298455.jpg')"></div>
-          </a>
         </div>
           <div class="card-body">
             <h4 class="card-title">
@@ -164,13 +160,11 @@
           </div>
         </div>
       </div>
-      <div class="col-lg col-sm-6 portfolio-item">
+      <div class="col-lg col-sm-6 portfolio-item" style=" cursor: pointer;" onclick="location.href='business3.html';">
         <div class="card h-100">
           <div class="card-bg"></div>
           <div class="card-head">
-          <a href="business3.html">
             <div class="card-img" style="background-image: url('img/shutterstock_1101455105.jpg')"></div>
-          </a>
         </div>
           <div class="card-body">
             <h4 class="card-title">
@@ -180,13 +174,11 @@
           </div>
         </div>
       </div>
-      <div class="col-lg col-sm-6 portfolio-item">
+      <div class="col-lg col-sm-6 portfolio-item" style=" cursor: pointer;" onclick="location.href='business4.html';">
         <div class="card h-100">
           <div class="card-bg"></div>
           <div class="card-head">
-          <a href="business4.html">
             <div class="card-img" style="background-image: url('img/office-1209640.jpg')"></div>
-          </a>
         </div>
           <div class="card-body">
             <h4 class="card-title">
